# PayMLflowDoctor

./: README.md
.github/workflows/: ci.yml
pay-mlflow-doctor/: README.md  pyproject.toml
pay-mlflow-doctor/.codex-plugin/: plugin.json
pay-mlflow-doctor/logs/: demo-report.json  demo-report.md
pay-mlflow-doctor/paymlflow_doctor/: __init__.py  autofix.py  cli.py  environment.py  models.py  policy.py  report.py  scanner.py  validators.py
pay-mlflow-doctor/policies/: kakaopay-mlops-policy.yaml
pay-mlflow-doctor/sample-data/broken-mlflow-project/: Dockerfile  MLmodel  conda.yaml  config.yaml  kserve.yaml  model_code.py  requirements.txt
pay-mlflow-doctor/sample-data/healthy-mlflow-project/: .env.example  Dockerfile  MLmodel  conda.yaml  kserve.yaml  model_code.py  requirements.txt
pay-mlflow-doctor/sample-data/healthy-mlflow-project/model/: model.pkl
pay-mlflow-doctor/scripts/: create_submission_zip.py  demo.sh
pay-mlflow-doctor/skills/pay-mlflow-doctor/: SKILL.md
pay-mlflow-doctor/tests/: test_validator.py
