[project]
name = "paymlflow-doctor"
version = "0.1.0"
description = "MLflow environment validator and deployment copilot for financial AI services."
requires-python = ">=3.9"
authors = [{ name = "KakaoPay AX Hackathon Team" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
paymlflow-doctor = "paymlflow_doctor.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
